--- a/src/app/components/tile-item/tile-item.scss
+++ b/src/app/components/tile-item/tile-item.scss
@@ -30,15 +30,15 @@
   @include rem(padding, 0, 0.25, 0.5);
   padding: 1px;
 
-  &:hover {
-    cursor: pointer;
-  }
-
   &::after {
     content: "";
     display: block;
     padding-top: 100%;
   }
+}
+
+.js-no-touch .TileItem:hover {
+  cursor: pointer;
 }
 
 @include media($min-width-m) {
@@ -66,11 +66,17 @@
   @include transform-style(preserve-3d);
   @include transition(background-color 0.2s, box-shadow 0.2s, transform 0.1s);
 
-  &:hover {
-    box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.1);
-    z-index: 1;
-    @include transform(scale(1.1));
-  }
+  // &:hover {
+  //   box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.1);
+  //   z-index: 1;
+  //   @include transform(scale(1.1));
+  // }
+}
+
+.js-no-touch .TileItem__wrapper-outer:hover {
+  box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.1);
+  z-index: 1;
+  @include transform(scale(1.1));
 }
 
 .TileItem__wrapper-outer.TileItem__wrapper-outer_isDisabled {
