--- a/src/app/containers/rule-details/rule-details.html
+++ b/src/app/containers/rule-details/rule-details.html
@@ -60,18 +60,21 @@
   </div>
 
   <div class="RuleDetails__content" ng-show="ruleDetails.showEnterActions">
-    <div class="action" ng-repeat="action in ruleDetails.actions track by $index">
-      <div class="Action__action-type">{{ action.actionType.name }}</div>
-      <div class="Action__device-name">{{ action.device.name ? action.device.name : action.device.deviceClass.name }}</div>
-      <div ng-if="action.ruleActionParams.length > 0" ng-repeat="ruleActionParam in action.ruleActionParams track by $index">
-        <svg class="RuleDetails__icon RuleDetails__icon_inline">
-          <use xlink:href="./assets/svg/ui/ui.symbol.svg#arrow-right-c"></use>
-        </svg>
-        <span ng-if="ruleActionParam.value !== undefined">{{ ruleActionParam.name }}:&nbsp;{{ ruleActionParam.value }}{{ ruleActionParam.unit | unit }}</span>
-        <span ng-if="ruleActionParam.eventParamName !== undefined">Value of {{ ruleActionParam.name }} = Value of {{ ruleActionParam.eventParamName }} ({{ ruleActionParam.eventType.name }})</span>
+    <p ng-if="ruleDetails.actions.length === 0">Nothing to turn ON.</p>
+    <div ng-if="ruleDetails.actions.length > 0">
+      <div class="action" ng-repeat="action in ruleDetails.actions track by $index">
+        <div class="Action__action-type">{{ action.actionType.name }}</div>
+        <div class="Action__device-name">{{ action.device.name ? action.device.name : action.device.deviceClass.name }}</div>
+        <div ng-if="action.ruleActionParams.length > 0" ng-repeat="ruleActionParam in action.ruleActionParams track by $index">
+          <svg class="RuleDetails__icon RuleDetails__icon_inline">
+            <use xlink:href="./assets/svg/ui/ui.symbol.svg#arrow-right-c"></use>
+          </svg>
+          <span ng-if="ruleActionParam.value !== undefined">{{ ruleActionParam.name }}:&nbsp;{{ ruleActionParam.value }}{{ ruleActionParam.unit | unit }}</span>
+          <span ng-if="ruleActionParam.eventParamName !== undefined">Value of {{ ruleActionParam.name }} = Value of {{ ruleActionParam.eventParamName }} ({{ ruleActionParam.eventType.name }})</span>
+        </div>
       </div>
     </div>
-    <button type="button" ng-if="action.ruleActionParams.length > 0" ng-click="ruleDetails.executeActions()">Turn on</button>
+    <button type="button" ng-if="ruleDetails.actions.length > 0" ng-click="ruleDetails.executeActions()">Turn on</button>
   </div>
 
   <div class="RuleDetails__content" ng-show="ruleDetails.showExitActions">
