Refactor intro component. Add add-connection and load components.

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -85,7 +85,9 @@
 @import "containers/thing-details/thing-details";
 
 @import "components/action-bar/action-bar";
+@import "components/add-connection/add-connection";
 @import "components/filter/filter";
+@import "components/load/load";
 @import "components/modal-container/modal-container";
 @import "components/navigation-bar/navigation-bar";
 @import "components/param-type/param-type";
