--- a/src/app/containers/intro/intro.html
+++ b/src/app/containers/intro/intro.html
@@ -23,34 +23,34 @@
 
 <div class="Intro">
   <!-- Logo -->
-  <img class="Intro__logo" src="./assets/svg/guh-logo.svg" alt="Logo of guh showing a green owl.">
-
-  <div ng-class="{ 'not-valid': intro.submitted && !intro.valid }">
-    <!-- Info texts -->
-    <p class="Intro__info" ng-show="intro.check && intro.valid">connecting to guh basestation</p>
-    <p class="Intro__info" ng-show="intro.load && intro.valid">loading things</p>
-
-    <!-- Setup -->
-    <div class="Intro__setup" ng-show="intro.setup" guh-wizard handle="setup">
-      <div guh-wizard-step title="Please enter the IP address or name of your guh system.">
-        <form name="setHost" novalidate ng-submit="intro.setHost()">  
-          <label>IP address/Host name</label>
-          <input name="test"
-                 type="text"
-                 ng-model="intro.host"
-                 ng-change="intro.checkHost()"
-                 ng-required="true" />
-
-
-          <!-- TODO: Replace with ng-messages when replacing this with directive (see controller) -->
-          <p ng-show="!intro.valid">The entered host is not valid.</p>
-
-          <div>
-            <button type="Button" ng-click="intro.resetHost()">Set to default</button>
-            <button type="submit">Save</button>
-          </div>
-        </form>
-      </div>
+  <div class="Intro__logo">
+    <div class="Intro__logo-wrapper">
+      <img src="./assets/svg/guh-logo.svg" alt="Logo of guh showing a green owl.">
+      <p>guh</p>
     </div>
   </div>
+
+  <!-- TODO: Replace with list component -->
+  <div class="Intro__content" ng-if="intro.view.content.connectionList">
+    <h2 class="Intro__title">Connect to local guhIO server</h2>
+    <ul class="List">
+      <li class="List__item List__item--notClickable" ng-show="intro.connections && intro.connections.length === 0">There are no saved server connections</li>
+      <li class="List__item" ng-click="intro.connect(connection)" ng-repeat="connection in intro.connections | orderBy: 'name' track by $index">
+        {{ connection.name }}
+        <guh-icon url="./assets/svg/ui/ui.symbol.svg#load-b" ng-class="{ 'pending': intro.connectionOpenStatus.pending }" ng-show="intro.connectionOpenStatus && intro.connectionOpenStatus.pending"></guh-icon>
+        <guh-icon url="./assets/svg/ui/ui.symbol.svg#checkmark" ng-show="intro.connectionOpenStatus && intro.connectionOpenStatus.success"></guh-icon>
+        <guh-icon url="./assets/svg/ui/ui.symbol.svg#close" ng-show="intro.connectionOpenStatus && intro.connectionOpenStatus.failure"></guh-icon>
+      </li>
+      <li class="List__item" ng-click="intro.addConnection()">{{ intro.connections && intro.connections.length === 0 ? 'Add a server connection...' : 'Add another server connection...' }}</li>
+    </ul>
+  </div>
+
+  <guh-add-connection class="Intro__content" connection-open-status="intro.connectionOpenStatus" on-open-connection="intro.connect(connection)" ng-if="intro.view.content.addConnection"></guh-add-connection>
+
+  <!-- TODO: Setup -->
+
+  <!-- TODO: Login -->
+
+  <!-- Load Data -->
+  <guh-load class="Intro__content" on-data-loaded="intro.showThings()" ng-if="intro.view.content.loadData"></guh-load>
 </div>
