--- a/src/app/containers/thing-details/device-class-templates/template-not-available.html
+++ b/src/app/containers/thing-details/device-class-templates/template-not-available.html
@@ -42,6 +42,6 @@
       <input class="input--type--readonly" ng-model="enhancedParam.param.value" type="password" disabled />
     </div>
     <div class="Param__value" ng-switch-default>{{ enhancedParam.param.value }}</div>
-    <div class="Param__name">{{ enhancedParam.param.name }}</div>
+    <div class="Param__name">{{ enhancedParam.paramType.name }}</div>
   </div>
 </div>
