Add login component. Change intro component. Add uuid lib.

--- a/src/app/components/login/login.scss
+++ b/src/app/components/login/login.scss
@@ -23,66 +23,14 @@
  * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
 
 
-(function() {
-  'use strict';
+.Login {
+  @include rem(margin-top, 1.5);
+  @include rem(padding, 1.5);
+}
 
-  angular
-    .module('guh.components')
-    .controller('AddConnectionCtrl', AddConnectionCtrl);
-
-  AddConnectionCtrl.$inject = ['$log', '$scope'];
-
-  /**
-   * @ngdoc controller
-   * @name guh.containers.controller:AddConnectionCtrl
-   * @description Container component for the intro.
-   *
-   */
-  function AddConnectionCtrl($log, $scope) {
-
-    var vm = this;
-
-    vm.host;
-    vm.port,
-    vm.ssl;
-    vm.default;
-    vm.newConnection = {};
-
-    // Methods
-    vm.setSsl = setSsl;
-    vm.setDefault = setDefault;
-    vm.tryToConnect = tryToConnect;
-
-
-    function setSsl(value) {
-      vm.ssl = value;
-    }
-
-    function setDefault(value) {
-      vm.default = value;
-    }
-
-    function tryToConnect(isValid) {
-      var protocol = vm.ssl ? 'wss' : 'ws';
-
-      if(isValid) {
-        vm.newConnection = {
-          id: vm.host,
-          settingsId: 'general',
-          default: vm.default,
-          name: vm.host,
-          protocol: protocol,
-          host: vm.host,
-          port: vm.port,
-          url: protocol + '://' + vm.host + ':' + vm.port
-        };
-
-        vm.onOpenConnection({
-          connection: vm.newConnection
-        });
-      }
-    }
-
-  };
-
-}());
+.Login__title {
+  text-align: center;
+  @include rem(font-size, 1.5);
+  @include rem(margin, 0, 0, 1.5)
+  @include rem(padding, 1.5);
+}
