--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -88,6 +88,7 @@
 @import "components/add-connection/add-connection";
 @import "components/filter/filter";
 @import "components/load/load";
+@import "components/login/login";
 @import "components/modal-container/modal-container";
 @import "components/navigation-bar/navigation-bar";
 @import "components/param-type/param-type";
