--- a/src/app/containers/intro/intro.html
+++ b/src/app/containers/intro/intro.html
@@ -30,26 +30,19 @@
     </div>
   </div>
 
-  <!-- TODO: Replace with list component -->
+  <!-- Login -->
+  <guh-login on-authentication-success="intro.authenticateConnection(authenticationData)" ng-if="intro.view.content.login"></guh-login>
+
+  <!-- Cloud connections -->
   <div class="Intro__content" ng-if="intro.view.content.connectionList">
-    <h2 class="Intro__title">Connect to local guhIO server</h2>
+    <h2 class="Intro__title">Available cloud connections</h2>
     <ul class="List">
-      <li class="List__item List__item--notClickable" ng-show="intro.connections && intro.connections.length === 0">There are no saved server connections</li>
-      <li class="List__item" ng-click="intro.connect(connection)" ng-repeat="connection in intro.connections | orderBy: 'name' track by $index">
+      <li class="List__item" ng-show="intro.connections && intro.connections.length === 0">There are no cloud connections available</li>
+      <li class="List__item" ng-click="intro.createTunnel(connection)" ng-repeat="connection in intro.connections | orderBy: 'name'">
         {{ connection.name }}
-        <guh-icon url="./assets/svg/ui/ui.symbol.svg#load-b" ng-class="{ 'pending': intro.connectionOpenStatus.pending }" ng-show="intro.connectionOpenStatus && intro.connectionOpenStatus.pending"></guh-icon>
-        <guh-icon url="./assets/svg/ui/ui.symbol.svg#checkmark" ng-show="intro.connectionOpenStatus && intro.connectionOpenStatus.success"></guh-icon>
-        <guh-icon url="./assets/svg/ui/ui.symbol.svg#close" ng-show="intro.connectionOpenStatus && intro.connectionOpenStatus.failure"></guh-icon>
       </li>
-      <li class="List__item" ng-click="intro.addConnection()">{{ intro.connections && intro.connections.length === 0 ? 'Add a server connection...' : 'Add another server connection...' }}</li>
     </ul>
   </div>
-
-  <guh-add-connection class="Intro__content" connection-open-status="intro.connectionOpenStatus" on-open-connection="intro.connect(connection)" ng-if="intro.view.content.addConnection"></guh-add-connection>
-
-  <!-- TODO: Setup -->
-
-  <!-- TODO: Login -->
 
   <!-- Load Data -->
   <guh-load class="Intro__content" on-data-loaded="intro.showThings()" ng-if="intro.view.content.loadData"></guh-load>
