Remove critical state handling from things list and add it to thing details.

--- a/src/app/containers/thing-details/thing-details.scss
+++ b/src/app/containers/thing-details/thing-details.scss
@@ -105,3 +105,11 @@
   @include rem(padding, 0.6);
   @include rem(width, 4);
 }
+
+.ThingDetails__critical {
+  background-color: #da5252;
+  color: $white;
+  text-align: center;
+  @include rem(padding, 0.35, 1.5);
+  @include rem(margin, 0.7, 0, 0.1);
+}
