--- a/src/app/containers/thing-details/thing-details.html
+++ b/src/app/containers/thing-details/thing-details.html
@@ -34,6 +34,8 @@
       <div class="ThingDetails__name">{{ thingDetails.name }}</div>
       <div class="ThingDetails__description">{{ thingDetails.getDescription('&nbsp;&middot;&nbsp;') }}</div>
 
+      <p class="ThingDetails__critical" ng-show="thingDetails.isCritical()">The device is currently not available.</p>
+
       <ul class="ThingDetails__sidebar-navigation">
         <li ng-class="{ 'active': thingDetails.showActions }" ng-click="thingDetails.show('actions')">Actions</li>
         <li ng-class="{ 'active': thingDetails.showStates }" ng-click="thingDetails.show('states')">States</li>
