Add edit icon and basic edit modal.

--- a/src/app/components/action-bar/action-bar.html
+++ b/src/app/components/action-bar/action-bar.html
@@ -29,7 +29,7 @@
         <svg class="ActionBar__icon" ng-class="{ 'ActionBar__icon--isActive': item.isToggle && item.toggleValue }" ng-if="item.iconUrl" ng-cloak>
           <use ng-attr-xlink:href="{{ item.iconUrl }}" xlink:href=""></use>
         </svg>
-        <span ng-if="item.label">{{ item.label }}</span>
+        <!-- <span ng-if="item.label">{{ item.label }}</span> -->
       </button>
     </li>
   </ul>
