--- a/src/app/containers/edit-thing/edit-thing.html
+++ b/src/app/containers/edit-thing/edit-thing.html
@@ -40,6 +40,7 @@
     <guh-text-input label="Name"
                     name="name"
                     required="true"
+                    type="{{ editThing.app.basicTypes.string }}"
                     value="editThing.name"
                     on-change="editThing.setName(value)"></guh-text-input>
 
